--- a/views/index.ejs
+++ b/views/index.ejs
@@ -78,7 +78,7 @@
     <!-- 事件模态框 -->
     <div id="eventModal" class="modal">
         <div class="modal-content">
-            <span class="close">&times;</span>
+            <span class="close" onclick="closeEventModal()">&times;</span>
             <h2>📅 <span id="modalDate"></span></h2>
             <div class="event-form">
                 <div class="category-selector">
